--- a/app/src/main/res/layout/fragment_delete_acc_activity.xml
+++ b/app/src/main/res/layout/fragment_delete_acc_activity.xml
@@ -3,16 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".delete_acc_activity">
+    tools:context=".DeleteAccountActivity">
 
     <LinearLayout
 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:orientation="vertical"
-        android:layout_marginTop="60dp"
-        >
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
 
         <RelativeLayout
@@ -57,8 +54,7 @@
                 android:inputType="textPassword"
                 android:minHeight="48dp"
                 android:padding="10dp"
-                android:textSize="20sp"
-                 />
+                android:textSize="20sp" />
 
             <Button
                 android:id="@+id/button_authenticate_delete_user"
