--- a/app/src/main/res/layout/change_password_activity.xml
+++ b/app/src/main/res/layout/change_password_activity.xml
@@ -61,7 +61,7 @@
 
             <Button
                 android:id="@+id/button_authenticate_delete_user"
-                android:layout_width="match_parent"
+                android:layout_width="246dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/editText_delete_user_current"
                 android:layout_marginLeft="70dp"
@@ -70,7 +70,7 @@
                 android:background="@drawable/button"
                 android:fontFamily="@font/concert_one"
                 android:text="Authenticate"
-                android:textSize="16sp" />
+                android:textSize="12sp" />
         </RelativeLayout>
 
         <RelativeLayout
