--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -129,17 +129,16 @@
         android:id="@+id/button_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/bg_login"
         android:fontFamily="@font/concert_one"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
         android:text="Register"
         app:backgroundTint="#F4A022"
-        app:layout_constraintEnd_toEndOf="@+id/edittext_password1"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="@+id/edittext_password1"
-        app:layout_constraintTop_toBottomOf="@+id/edittext_password1" />
+        app:layout_constraintEnd_toEndOf="@+id/btnPolicy"
+        app:layout_constraintStart_toStartOf="@+id/btnPolicy"
+        app:layout_constraintTop_toBottomOf="@+id/btnPolicy" />
 
     <TextView
         android:id="@+id/textview_registerdesc"
@@ -177,5 +176,46 @@
         app:layout_constraintTop_toTopOf="@+id/guideline_top"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/logo_3" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/concert_one"
+        android:text="by clicking register you agree to our"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="@+id/edittext_password1"
+        app:layout_constraintTop_toBottomOf="@+id/edittext_password1" />
+
+    <TextView
+        android:id="@+id/btnTerms"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="5dp"
+        android:fontFamily="@font/concert_one"
+        android:text="Term and Condition,"
+        android:textColor="#FF9800"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="@+id/edittext_password1"
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/edittext_password1" />
+
+    <TextView
+        android:id="@+id/btnPolicy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/concert_one"
+        android:text="Privacy Policy."
+        android:textColor="#FF9800"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="@+id/btnTerms"
+        app:layout_constraintStart_toStartOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
