--- a/app/src/main/res/layout/activity_benefit.xml
+++ b/app/src/main/res/layout/activity_benefit.xml
@@ -11,11 +11,13 @@
         android:id="@+id/textview_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:fontFamily="@font/concert_one"
         android:hint="Loading"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="23sp"
+        android:textSize="19sp"
         app:layout_constraintEnd_toEndOf="@+id/textView6"
         app:layout_constraintStart_toStartOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
@@ -140,10 +142,9 @@
         android:layout_width="207dp"
         android:layout_height="204dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline17"
-        app:layout_constraintEnd_toStartOf="@+id/guideline16"
-        app:layout_constraintStart_toStartOf="@+id/guideline15"
-        app:layout_constraintTop_toBottomOf="@+id/textview_message"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintEnd_toEndOf="@+id/textView7"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
         app:srcCompat="@drawable/good_job" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -152,6 +153,5 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.89" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
