--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -7,332 +7,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
-    <!--    <androidx.constraintlayout.widget.Guideline-->
-    <!--        android:id="@+id/menu_guideline_header_edge"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:orientation="horizontal"-->
-    <!--        app:layout_constraintGuide_percent="0.20" />-->
-
-    <!--    <androidx.constraintlayout.widget.Guideline-->
-    <!--        android:id="@+id/guideline4"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:orientation="horizontal"-->
-    <!--        app:layout_constraintGuide_percent="0.02" />-->
-
-    <!--    <androidx.constraintlayout.widget.Guideline-->
-    <!--        android:id="@+id/guideline10"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:orientation="vertical"-->
-    <!--        app:layout_constraintGuide_percent="0.05109489" />-->
-
-    <!--    <androidx.constraintlayout.widget.Guideline-->
-    <!--        android:id="@+id/guideline11"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:orientation="vertical"-->
-    <!--        app:layout_constraintGuide_percent="0.95" />-->
-
-    <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
-    <!--        android:id="@+id/menu_accountpanel"-->
-    <!--        android:layout_width="0dp"-->
-    <!--        android:layout_height="126dp"-->
-    <!--        android:layout_marginTop="10dp"-->
-    <!--        android:background="@drawable/box"-->
-    <!--        app:layout_constraintEnd_toStartOf="@+id/guideline11"-->
-    <!--        app:layout_constraintHorizontal_bias="0.428"-->
-    <!--        app:layout_constraintStart_toStartOf="@+id/guideline10"-->
-    <!--        app:layout_constraintTop_toTopOf="@+id/menu_guideline_header_edge">-->
-
-    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
-
-    <!--    <ImageView-->
-    <!--        android:id="@+id/imageview_picture"-->
-    <!--        android:layout_width="93dp"-->
-    <!--        android:layout_height="114dp"-->
-    <!--        app:layout_constraintBottom_toBottomOf="@+id/menu_accountpanel"-->
-    <!--        app:layout_constraintEnd_toEndOf="@+id/menu_accountpanel"-->
-    <!--        app:layout_constraintHorizontal_bias="0.053"-->
-    <!--        app:layout_constraintStart_toStartOf="@+id/menu_accountpanel"-->
-    <!--        app:layout_constraintTop_toTopOf="@+id/menu_accountpanel"-->
-    <!--        app:layout_constraintVertical_bias="0.833"-->
-    <!--        app:srcCompat="@drawable/ic_baseline_account_circle_24" />-->
-
-    <!--    <TextView-->
-    <!--        android:id="@+id/textview_name"-->
-    <!--        android:layout_width="0dp"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_marginStart="10dp"-->
-    <!--        android:layout_marginEnd="16dp"-->
-    <!--        android:fontFamily="@font/concert_one"-->
-    <!--        android:hint="Loading..."-->
-    <!--        android:textColor="@color/black"-->
-    <!--        android:textSize="19sp"-->
-    <!--        app:layout_constraintBottom_toBottomOf="@+id/menu_accountpanel"-->
-    <!--        app:layout_constraintEnd_toEndOf="@+id/menu_accountpanel"-->
-    <!--        app:layout_constraintStart_toEndOf="@+id/imageview_picture"-->
-    <!--        app:layout_constraintTop_toTopOf="@+id/menu_accountpanel" />-->
-
-    <!--    <GridLayout-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="0dp"-->
-    <!--        android:layout_marginTop="10dp"-->
-    <!--        android:columnCount="2"-->
-    <!--        android:rowCount="3"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/menu_accountpanel">-->
-
-    <!--        <androidx.cardview.widget.CardView-->
-    <!--            android:id="@+id/home_button_history"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_row="0"-->
-    <!--            android:layout_rowWeight="1"-->
-    <!--            android:layout_columnWeight="1"-->
-    <!--            android:layout_gravity="fill"-->
-    <!--            android:clickable="true"-->
-    <!--            android:foreground="?attr/selectableItemBackground"-->
-    <!--            app:cardCornerRadius="8dp"-->
-    <!--            app:cardElevation="8dp"-->
-    <!--            app:cardUseCompatPadding="true">-->
-
-    <!--            <LinearLayout-->
-    <!--                android:layout_width="wrap_content"-->
-    <!--                android:layout_height="wrap_content"-->
-    <!--                android:layout_gravity="center_vertical|center_horizontal"-->
-    <!--                android:gravity="center"-->
-    <!--                android:orientation="vertical">-->
-
-    <!--                <ImageView-->
-    <!--                    android:layout_width="65dp"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:src="@drawable/ic_baseline_history_24" />-->
-
-    <!--                <TextView-->
-    <!--                    android:layout_width="wrap_content"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:text="History"-->
-    <!--                    android:textColor="@color/black"-->
-    <!--                    android:textSize="16sp" />-->
-    <!--            </LinearLayout>-->
-
-    <!--        </androidx.cardview.widget.CardView>-->
-
-    <!--        <androidx.cardview.widget.CardView-->
-    <!--            android:id="@+id/home_button_watchlist"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_row="0"-->
-    <!--            android:layout_rowWeight="1"-->
-    <!--            android:layout_columnWeight="1"-->
-    <!--            android:layout_gravity="fill"-->
-    <!--            android:clickable="true"-->
-    <!--            android:foreground="?attr/selectableItemBackground"-->
-    <!--            app:cardCornerRadius="8dp"-->
-    <!--            app:cardElevation="8dp"-->
-    <!--            app:cardUseCompatPadding="true">-->
-
-    <!--            <LinearLayout-->
-    <!--                android:layout_width="wrap_content"-->
-    <!--                android:layout_height="wrap_content"-->
-    <!--                android:layout_gravity="center_vertical|center_horizontal"-->
-    <!--                android:gravity="center"-->
-    <!--                android:orientation="vertical">-->
-
-    <!--                <ImageView-->
-    <!--                    android:layout_width="wrap_content"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:src="@drawable/ic_baseline_watch_later_24" />-->
-
-    <!--                <TextView-->
-    <!--                    android:layout_width="wrap_content"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:text="Watchlist"-->
-    <!--                    android:textColor="@color/black"-->
-    <!--                    android:textSize="16sp" />-->
-    <!--            </LinearLayout>-->
-
-    <!--        </androidx.cardview.widget.CardView>-->
-
-    <!--        <androidx.cardview.widget.CardView-->
-    <!--            android:id="@+id/home_button_offlinevideos"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_row="0"-->
-    <!--            android:layout_rowWeight="1"-->
-    <!--            android:layout_columnWeight="1"-->
-    <!--            android:layout_gravity="fill"-->
-    <!--            android:clickable="true"-->
-    <!--            android:foreground="?attr/selectableItemBackground"-->
-    <!--            app:cardCornerRadius="8dp"-->
-    <!--            app:cardElevation="8dp"-->
-    <!--            app:cardUseCompatPadding="true">>-->
-
-    <!--            <LinearLayout-->
-    <!--                android:layout_width="wrap_content"-->
-    <!--                android:layout_height="wrap_content"-->
-    <!--                android:layout_gravity="center_vertical|center_horizontal"-->
-    <!--                android:gravity="center"-->
-    <!--                android:orientation="vertical">-->
-
-    <!--                <ImageView-->
-    <!--                    android:layout_width="wrap_content"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:src="@drawable/ic_baseline_cloud_download_24" />-->
-
-    <!--                <TextView-->
-    <!--                    android:layout_width="wrap_content"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:text="Offline Videos"-->
-    <!--                    android:textColor="@color/black"-->
-    <!--                    android:textSize="16sp" />-->
-    <!--            </LinearLayout>-->
-
-    <!--        </androidx.cardview.widget.CardView>-->
-
-    <!--        <androidx.cardview.widget.CardView-->
-    <!--            android:id="@+id/home_button_settings"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_row="0"-->
-    <!--            android:layout_rowWeight="1"-->
-    <!--            android:layout_columnWeight="1"-->
-    <!--            android:layout_gravity="fill"-->
-    <!--            android:clickable="true"-->
-    <!--            android:foreground="?attr/selectableItemBackground"-->
-    <!--            app:cardCornerRadius="8dp"-->
-    <!--            app:cardElevation="8dp"-->
-    <!--            app:cardUseCompatPadding="true">>-->
-
-    <!--            <LinearLayout-->
-    <!--                android:layout_width="wrap_content"-->
-    <!--                android:layout_height="wrap_content"-->
-    <!--                android:layout_gravity="center_vertical|center_horizontal"-->
-    <!--                android:gravity="center"-->
-    <!--                android:orientation="vertical">-->
-
-    <!--                <ImageView-->
-    <!--                    android:layout_width="wrap_content"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:src="@drawable/ic_baseline_settings_24" />-->
-
-    <!--                <TextView-->
-    <!--                    android:layout_width="wrap_content"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:text="Account Settings"-->
-    <!--                    android:textColor="@color/black"-->
-    <!--                    android:textSize="16sp" />-->
-    <!--            </LinearLayout>-->
-
-    <!--        </androidx.cardview.widget.CardView>-->
-
-    <!--        <androidx.cardview.widget.CardView-->
-    <!--            android:id="@+id/home_button_about"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_row="0"-->
-    <!--            android:layout_rowWeight="1"-->
-    <!--            android:layout_columnWeight="1"-->
-    <!--            android:layout_gravity="fill"-->
-    <!--            android:clickable="true"-->
-    <!--            android:foreground="?attr/selectableItemBackground"-->
-    <!--            app:cardCornerRadius="8dp"-->
-    <!--            app:cardElevation="8dp"-->
-    <!--            app:cardUseCompatPadding="true">>-->
-
-    <!--            <LinearLayout-->
-    <!--                android:layout_width="wrap_content"-->
-    <!--                android:layout_height="wrap_content"-->
-    <!--                android:layout_gravity="center_vertical|center_horizontal"-->
-    <!--                android:gravity="center"-->
-    <!--                android:orientation="vertical">-->
-
-    <!--                <ImageView-->
-    <!--                    android:layout_width="wrap_content"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:src="@drawable/ic_baseline_info_24" />-->
-
-    <!--                <TextView-->
-    <!--                    android:layout_width="wrap_content"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:text="About"-->
-    <!--                    android:textColor="@color/black"-->
-    <!--                    android:textSize="16sp" />-->
-    <!--            </LinearLayout>-->
-
-    <!--        </androidx.cardview.widget.CardView>-->
-
-    <!--        <androidx.cardview.widget.CardView-->
-    <!--            android:id="@+id/home_button_logout"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_row="0"-->
-    <!--            android:layout_rowWeight="1"-->
-    <!--            android:layout_columnWeight="1"-->
-    <!--            android:layout_gravity="fill"-->
-    <!--            android:clickable="true"-->
-    <!--            android:foreground="?attr/selectableItemBackground"-->
-    <!--            app:cardCornerRadius="8dp"-->
-    <!--            app:cardElevation="8dp"-->
-    <!--            app:cardUseCompatPadding="true">>-->
-
-    <!--            <LinearLayout-->
-    <!--                android:layout_width="wrap_content"-->
-    <!--                android:layout_height="wrap_content"-->
-    <!--                android:layout_gravity="center_vertical|center_horizontal"-->
-    <!--                android:gravity="center"-->
-    <!--                android:orientation="vertical">-->
-
-    <!--                <ImageView-->
-    <!--                    android:layout_width="wrap_content"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:src="@drawable/ic_logout" />-->
-
-    <!--                <TextView-->
-    <!--                    android:layout_width="wrap_content"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:text="Log Out"-->
-    <!--                    android:textColor="@color/black"-->
-    <!--                    android:textSize="16sp" />-->
-    <!--            </LinearLayout>-->
-
-    <!--        </androidx.cardview.widget.CardView>-->
-
-
-    <!--    </GridLayout>-->
-
-    <!--    <ImageView-->
-    <!--        android:id="@+id/imageView4"-->
-    <!--        android:layout_width="0dp"-->
-    <!--        android:layout_height="0dp"-->
-    <!--        app:layout_constraintBottom_toTopOf="@+id/menu_guideline_header_edge"-->
-    <!--        app:layout_constraintEnd_toStartOf="@+id/guideline11"-->
-    <!--        app:layout_constraintStart_toStartOf="@+id/guideline10"-->
-    <!--        app:layout_constraintTop_toTopOf="@+id/guideline4"-->
-    <!--        app:srcCompat="@drawable/logo_3" />-->
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Menu Settings"
-            android:layout_centerInParent="true"
-            android:textColor="@color/black"
-            android:fontFamily="@font/concert_one"
-            android:textSize="19sp"/>
-    </RelativeLayout>
-    
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
