--- a/app/src/main/res/layout/fragment_delete_account.xml
+++ b/app/src/main/res/layout/fragment_delete_account.xml
@@ -3,17 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DeleteAccountActivity">
+    tools:context=".DeleteAccountFragment">
 
     <LinearLayout
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="16dp">
 
 
         <RelativeLayout
-            android:layout_marginTop="50dp"
             android:id="@+id/RL_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
