--- a/app/src/main/res/layout/activity_health_related.xml
+++ b/app/src/main/res/layout/activity_health_related.xml
@@ -37,6 +37,7 @@
 
     <RelativeLayout
         android:id="@+id/heightlayout"
+        android:background="@drawable/cardbackground"
         android:layout_width="375dp"
         android:layout_height="287dp"
         android:layout_above="@+id/centerhorizontalline"
@@ -121,7 +122,7 @@
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginBottom="15dp"
-        android:background="@drawable/buttonbackground"
+        android:background="@drawable/bg_login"
         android:fontFamily="@font/concert_one"
         android:text="Next"
         android:textColor="@color/black"
