--- a/app/src/main/res/layout/activity_weight_goal.xml
+++ b/app/src/main/res/layout/activity_weight_goal.xml
@@ -36,6 +36,7 @@
 
     <RelativeLayout
         android:id="@+id/weightlayout"
+        android:background="@drawable/cardbackground"
         android:layout_width="340dp"
         android:layout_height="150dp"
         android:layout_above="@+id/centerhorizontalline"
@@ -65,6 +66,7 @@
             android:fontFamily="@font/concert_one"
             android:gravity="center_horizontal"
             android:hint="00"
+            android:textColorHint="@color/white"
             android:inputType="numberSigned"
             android:textColor="@color/white"
             android:textSize="40sp"
@@ -86,6 +88,7 @@
 
     <RelativeLayout
         android:id="@+id/heightlayout"
+        android:background="@drawable/cardbackground"
         android:layout_width="340dp"
         android:layout_height="150dp"
         android:layout_above="@+id/centerhorizontalline"
@@ -114,7 +117,7 @@
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginBottom="15dp"
-        android:background="@drawable/buttonbackground"
+        android:background="@drawable/bg_login"
         android:fontFamily="@font/concert_one"
         android:text="Next"
         android:textColor="@color/black"
