--- a/caches/transforms-1/files-1.1/firebase-ui-auth-4.1.0.aar/af5b441e0a7c20d15e9def935382fd7a/res/values/values.xml
+++ b/caches/transforms-1/files-1.1/firebase-ui-auth-4.1.0.aar/af5b441e0a7c20d15e9def935382fd7a/res/values/values.xml
@@ -74,7 +74,7 @@
     <string name="fui_password_recovery_body" translation_description="Password recovery message body">Get instructions sent to this email that explain how to
         reset your password.</string>
     <string name="fui_phone_hint" translation_description="Hint for phone input field">Phone Number</string>
-    <string name="fui_privacy_policy" translation_description="Link text to web url containing the app&apos;s privacy policy">Privacy Policy</string>
+    <string name="fui_privacy_policy" translation_description="Link text to web url containing the app&apos;s privacy policyDialog">Privacy Policy</string>
     <string name="fui_progress_dialog_checking_accounts" translation_description="Progress dialog text while checking for existing accounts">Checking for existing accounts…</string>
     <string name="fui_progress_dialog_loading" translation_description="Loading text in dialog">Loading…</string>
     <string name="fui_progress_dialog_sending" translation_description="Progress dialog while password recovery email is being sent">Sending…</string>
@@ -99,8 +99,8 @@
     <string name="fui_title_register_email" translation_description="Title for signup form">Sign up</string>
     <string name="fui_title_welcome_back_idp_prompt" translatable="false">@string/fui_sign_in_default</string>
     <string name="fui_title_welcome_back_password_prompt" translatable="false">@string/fui_sign_in_default</string>
-    <string name="fui_tos_and_pp" translation_description="Global ToS and privacy policy message">By continuing, you are indicating that you accept our <ns2:g example="https://google.com/terms" id="tos" translation_description="Terms of service text">%1$s</ns2:g> and <ns2:g example="https://google.com/privacy" id="pp" translation_description="Privacy policy text">%2$s</ns2:g>.</string>
-    <string name="fui_tos_and_pp_footer" translation_description="Global ToS and Privacy policy footer"><ns2:g example="https://google.com/terms" id="tos" translation_description="Footer ToS text">%1$s</ns2:g> \u00A0 \u00A0 <ns2:g example="https://google.com/privacy" id="pp" translation_description="Footer privacy policy text">%2$s</ns2:g></string>
+    <string name="fui_tos_and_pp" translation_description="Global ToS and privacy policyDialog message">By continuing, you are indicating that you accept our <ns2:g example="https://google.com/terms" id="tos" translation_description="Terms of service text">%1$s</ns2:g> and <ns2:g example="https://google.com/privacy" id="pp" translation_description="Privacy policyDialog text">%2$s</ns2:g>.</string>
+    <string name="fui_tos_and_pp_footer" translation_description="Global ToS and Privacy policyDialog footer"><ns2:g example="https://google.com/terms" id="tos" translation_description="Footer ToS text">%1$s</ns2:g> \u00A0 \u00A0 <ns2:g example="https://google.com/privacy" id="pp" translation_description="Footer privacy policyDialog text">%2$s</ns2:g></string>
     <string name="fui_trouble_signing_in" translation_description="Link leading to forgot password flow">Trouble signing in?</string>
     <string name="fui_verify_phone_number" translation_description="Button text to submit confirmation code and complete phone verification">Verify Phone Number</string>
     <string name="fui_verify_phone_number_title" translation_description="Phone number entry form title">Enter your phone number</string>
